# lyra-next

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
crates/lyra-cli/: Cargo.toml
crates/lyra-cli/src/: include_loader.rs  main.rs
crates/lyra-db/: Cargo.toml
crates/lyra-db/src/: callable_queries.rs  case_check.rs  checks_index.rs  const_eval.rs  decl_check.rs  default_nettype_queries.rs  diagnostics.rs  dim_model.rs  dim_resolve.rs  elab_eval.rs  elab_lower.rs  elab_queries.rs  elaboration.rs  enum_queries.rs  expr_queries.rs  foreach_check.rs  include_resolve.rs  jump_check.rs  lib.rs  lower_diag.rs  lower_type_check.rs  modport_check.rs  modport_queries.rs  module_sig.rs  pipeline.rs  record_queries.rs  resolve_at.rs  resolve_helpers.rs  semantic.rs  struct_queries.rs  timescale_queries.rs  ty_resolve.rs  type_queries.rs
crates/lyra-db/src/facts/: mod.rs  modport.rs
crates/lyra-db/src/lower_type_check/: array.rs  assignment_pattern.rs  call.rs  enum_diag.rs  misc.rs  mod.rs  record.rs  stream.rs
crates/lyra-db/src/tests/: const_eval.rs  elab.rs  enum_base.rs  exports.rs  expr_type.rs  lifetime.rs  mod.rs  modport.rs  resolve.rs  timescale.rs  type_at.rs  type_diag.rs  type_of.rs
crates/lyra-semantic/: Cargo.toml
crates/lyra-semantic/src/: aggregate.rs  builder.rs  builder_items.rs  builder_order.rs  builder_stmt.rs  builder_tests.rs  builder_types.rs  builtin_methods.rs  case_check.rs  coerce.rs  const_eval.rs  def_entry.rs  def_index.rs  default_nettype.rs  design_element.rs  diagnostic.rs  enum_def.rs  expr_helpers.rs  expr_lvalue.rs  foreach_check.rs  global_index.rs  instance_decl.rs  interface_id.rs  lhs.rs  lib.rs  literal.rs  member.rs  member_name.rs  modport_def.rs  modport_facts.rs  name_graph.rs  name_lowering.rs  nettype_def.rs  record.rs  resolve.rs  resolve_build.rs  resolve_index.rs  resolve_tests.rs  scopes.rs  site.rs  (+15 more)
crates/lyra-semantic/src/streaming/: check.rs  mod.rs  shape.rs  width.rs
crates/lyra-semantic/src/type_infer/: access.rs  aggregate.rs  assignment_pattern.rs  call.rs  expr_type.rs  mod.rs  range.rs  scalar.rs  scoped.rs
crates/lyra-semantic/src/types/: foreach_dim.rs  mod.rs  tests.rs
crates/lyra-semantic/tests/: type_extract.rs
crates/lyra-tests/: Cargo.toml
crates/lyra-tests/src/: annotation.rs  include_loader.rs  lib.rs  resolve.rs
crates/lyra-tests/tests/: corpus.rs  parse.rs
crates/lyra-tests/tests/snapshots/: corpus__corpus_cross_file_resolve.snap  corpus__corpus_duplicate_module.snap  corpus__corpus_unresolved_name.snap  corpus__lrm__11__11.4.14.0__streaming_general__slice_size_const.snap  corpus__lrm__11__11.4.14.3__streaming_unpack.snap  corpus__lrm__11__11.4.14.4__streaming_dynamic__greedy_absorber.snap  corpus__lrm__11__11.4.14.4__streaming_dynamic__with_clause.snap  corpus__lrm__11__11.5.1__bit_part_select__constant_bounds.snap  corpus__lrm__20__20.5__conversion_functions.snap  (+142 more)
(+769 files in other folders)
