[package]
name = "lyra-semantic"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
lyra-source.workspace = true
lyra-ast.workspace = true
lyra-diag.workspace = true
lyra-lexer.workspace = true
lyra-parser.workspace = true
smol_str.workspace = true
